Fix navigation on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,7 +7,6 @@ html {
 body {
   font-family: 'Karla', sans-serif;  background-color: #FFFFFF;
     margin: 0;
-    overflow-x: hidden;
     overflow-y:scroll;
     overflow-x:hidden;
     font-weight: 400;
